Fixed translations and weapons list Due to changes to the items_game.txt it was necessary to filter the weapons based on different criteria.

--- a/translations/chi/weapons.phrases.tf.txt
+++ b/translations/chi/weapons.phrases.tf.txt
@@ -1,101 +1,5 @@
 ﻿"Phrases"
 {
-	"TF_WEAPON_BAT"
-	{
-		"chi"	"短棍"
-	}
-	"TF_WEAPON_BOTTLE"
-	{
-		"chi"	"瓶子"
-	}
-	"TF_WEAPON_FIREAXE"
-	{
-		"chi"	"消防斧"
-	}
-	"TF_WEAPON_CLUB"
-	{
-		"chi"	"反曲刀"
-	}
-	"TF_WEAPON_KNIFE"
-	{
-		"chi"	"刀子"
-	}
-	"TF_WEAPON_FISTS"
-	{
-		"chi"	"拳头"
-	}
-	"TF_WEAPON_SHOVEL"
-	{
-		"chi"	"铁锹"
-	}
-	"TF_WEAPON_WRENCH"
-	{
-		"chi"	"扳手"
-	}
-	"TF_WEAPON_BONESAW"
-	{
-		"chi"	"骨锯"
-	}
-	"TF_WEAPON_SHOTGUN"
-	{
-		"chi"	"霰弹枪"
-	}
-	"TF_WEAPON_SCATTERGUN"
-	{
-		"chi"	"散弹枪"
-	}
-	"TF_WEAPON_SNIPERRIFLE"
-	{
-		"chi"	"狙击步枪"
-	}
-	"TF_WEAPON_MINIGUN"
-	{
-		"chi"	"转轮机枪"
-	}
-	"TF_WEAPON_SMG"
-	{
-		"chi"	"SMG"
-	}
-	"TF_WEAPON_SYRINGEGUN"
-	{
-		"chi"	"注射枪"
-	}
-	"TF_WEAPON_ROCKETLAUNCHER"
-	{
-		"chi"	"火箭发射器"
-	}
-	"TF_WEAPON_GRENADELAUNCHER"
-	{
-		"chi"	"榴弹发射器"
-	}
-	"TF_WEAPON_PIPEBOMBLAUNCHER"
-	{
-		"chi"	"粘性炸弹发射器"
-	}
-	"TF_WEAPON_FLAMETHROWER"
-	{
-		"chi"	"火焰喷射器"
-	}
-	"TF_WEAPON_PISTOL"
-	{
-		"chi"	"手枪"
-	}
-	"TF_WEAPON_REVOLVER"
-	{
-		"chi"	"左轮手枪"
-	}
-	"TF_WEAPON_PDA_ENGINEER"
-	{
-		"chi"	"PDA"
-	}
-	"TF_WEAPON_MEDIGUN"
-	{
-		"chi"	"医疗枪"
-	}
-	"TF_WEAPON_WATCH"
-	{
-		"chi"	"隐形手表"
-	}
 	"TF_UNIQUE_ACHIEVEMENT_MEDIGUN1"
 	{
 		"chi"	"闪电战医疗枪"
@@ -155,14 +59,6 @@
 	"TF_UNIQUE_ACHIEVEMENT_JAR"
 	{
 		"chi"	"瓶手道尿瓶"
-	}
-	"TF_UNIQUE_ACHIEVEMENT_FEIGNWATCH"
-	{
-		"chi"	"死亡顶替者怀表"
-	}
-	"TF_UNIQUE_ACHIEVEMENT_CLOAKWATCH"
-	{
-		"chi"	"隐秘刺杀者运动表"
 	}
 	"TF_UNIQUE_ACHIEVEMENT_REVOLVER"
 	{
@@ -224,9 +120,21 @@
 	{
 		"chi"	"巧克力块"
 	}
+	"TF_TTG_MAXGUN"
+	{
+		"chi"	"Lugermorph"
+	}
+	"TF_TTG_SAMREVOLVER"
+	{
+		"chi"	"Big Kill"
+	}
 	"TF_UNIQUE_ENERGYDRINK_CRITCOLA"
 	{
 		"chi"	"暴击可乐"
+	}
+	"TF_UNIQUE_GOLDEN_WRENCH"
+	{
+		"chi"	"黄金扳手"
 	}
 	"TF_UNIQUE_TRIBALMANKUKRI"
 	{
