--- a/translations/da/weapons.phrases.tf.txt
+++ b/translations/da/weapons.phrases.tf.txt
@@ -1,101 +1,5 @@
 ﻿"Phrases"
 {
-	"TF_WEAPON_BAT"
-	{
-		"da"	"Bat"
-	}
-	"TF_WEAPON_BOTTLE"
-	{
-		"da"	"Flaske"
-	}
-	"TF_WEAPON_FIREAXE"
-	{
-		"da"	"Brandøkse"
-	}
-	"TF_WEAPON_CLUB"
-	{
-		"da"	"Kukri"
-	}
-	"TF_WEAPON_KNIFE"
-	{
-		"da"	"Kniv"
-	}
-	"TF_WEAPON_FISTS"
-	{
-		"da"	"Næver"
-	}
-	"TF_WEAPON_SHOVEL"
-	{
-		"da"	"Skovl"
-	}
-	"TF_WEAPON_WRENCH"
-	{
-		"da"	"Skruenøgle"
-	}
-	"TF_WEAPON_BONESAW"
-	{
-		"da"	"Knoglesav"
-	}
-	"TF_WEAPON_SHOTGUN"
-	{
-		"da"	"Haglgevær"
-	}
-	"TF_WEAPON_SCATTERGUN"
-	{
-		"da"	"Haglspreder"
-	}
-	"TF_WEAPON_SNIPERRIFLE"
-	{
-		"da"	"Snigskytteriffel"
-	}
-	"TF_WEAPON_MINIGUN"
-	{
-		"da"	"Rullegevær"
-	}
-	"TF_WEAPON_SMG"
-	{
-		"da"	"Maskinpistol"
-	}
-	"TF_WEAPON_SYRINGEGUN"
-	{
-		"da"	"Sprøjtepistol"
-	}
-	"TF_WEAPON_ROCKETLAUNCHER"
-	{
-		"da"	"Raketstyr"
-	}
-	"TF_WEAPON_GRENADELAUNCHER"
-	{
-		"da"	"Granatkaster"
-	}
-	"TF_WEAPON_PIPEBOMBLAUNCHER"
-	{
-		"da"	"Klæbebombekaster"
-	}
-	"TF_WEAPON_FLAMETHROWER"
-	{
-		"da"	"Flammekaster"
-	}
-	"TF_WEAPON_PISTOL"
-	{
-		"da"	"Pistol"
-	}
-	"TF_WEAPON_REVOLVER"
-	{
-		"da"	"Revolver"
-	}
-	"TF_WEAPON_PDA_ENGINEER"
-	{
-		"da"	"PDA"
-	}
-	"TF_WEAPON_MEDIGUN"
-	{
-		"da"	"Medi-gevær"
-	}
-	"TF_WEAPON_WATCH"
-	{
-		"da"	"Usynlighedsur"
-	}
 	"TF_UNIQUE_ACHIEVEMENT_MEDIGUN1"
 	{
 		"da"	"Kritzkrieg"
@@ -155,14 +59,6 @@
 	"TF_UNIQUE_ACHIEVEMENT_JAR"
 	{
 		"da"	"Jarate"
-	}
-	"TF_UNIQUE_ACHIEVEMENT_FEIGNWATCH"
-	{
-		"da"	"Dead Ringer"
-	}
-	"TF_UNIQUE_ACHIEVEMENT_CLOAKWATCH"
-	{
-		"da"	"Cloak and Dagger"
 	}
 	"TF_UNIQUE_ACHIEVEMENT_REVOLVER"
 	{
@@ -224,9 +120,21 @@
 	{
 		"da"	"Dalokohs Bar"
 	}
+	"TF_TTG_MAXGUN"
+	{
+		"da"	"Lugermorph"
+	}
+	"TF_TTG_SAMREVOLVER"
+	{
+		"da"	"Big Kill"
+	}
 	"TF_UNIQUE_ENERGYDRINK_CRITCOLA"
 	{
 		"da"	"Crit-a-Cola"
+	}
+	"TF_UNIQUE_GOLDEN_WRENCH"
+	{
+		"da"	"Gylden Skruenøgle"
 	}
 	"TF_UNIQUE_TRIBALMANKUKRI"
 	{
@@ -295,5 +203,9 @@
 	"TF_UNIQUE_GLOVES_OF_RUNNING_URGENTLY"
 	{
 		"da"	"Gevaldigt Rapfodede Unionshandsker"
+	}
+	"TF_UNIQUE_FRYINGPAN"
+	{
+		"da"	"Stegepande"
 	}
 }
