--- a/translations/nl/weapons.phrases.tf.txt
+++ b/translations/nl/weapons.phrases.tf.txt
@@ -1,101 +1,5 @@
 ﻿"Phrases"
 {
-	"TF_WEAPON_BAT"
-	{
-		"nl"	"Knuppel"
-	}
-	"TF_WEAPON_BOTTLE"
-	{
-		"nl"	"Fles"
-	}
-	"TF_WEAPON_FIREAXE"
-	{
-		"nl"	"Vuurbijl"
-	}
-	"TF_WEAPON_CLUB"
-	{
-		"nl"	"Kukri-mes"
-	}
-	"TF_WEAPON_KNIFE"
-	{
-		"nl"	"Mes"
-	}
-	"TF_WEAPON_FISTS"
-	{
-		"nl"	"Vuisten"
-	}
-	"TF_WEAPON_SHOVEL"
-	{
-		"nl"	"Spade"
-	}
-	"TF_WEAPON_WRENCH"
-	{
-		"nl"	"Moersleutel"
-	}
-	"TF_WEAPON_BONESAW"
-	{
-		"nl"	"Bottenzaag"
-	}
-	"TF_WEAPON_SHOTGUN"
-	{
-		"nl"	"Shotgun"
-	}
-	"TF_WEAPON_SCATTERGUN"
-	{
-		"nl"	"Scattergun"
-	}
-	"TF_WEAPON_SNIPERRIFLE"
-	{
-		"nl"	"Snipergeweer"
-	}
-	"TF_WEAPON_MINIGUN"
-	{
-		"nl"	"Minigun"
-	}
-	"TF_WEAPON_SMG"
-	{
-		"nl"	"SMG"
-	}
-	"TF_WEAPON_SYRINGEGUN"
-	{
-		"nl"	"Injectiepistool"
-	}
-	"TF_WEAPON_ROCKETLAUNCHER"
-	{
-		"nl"	"Raketwerper"
-	}
-	"TF_WEAPON_GRENADELAUNCHER"
-	{
-		"nl"	"Granaatwerper"
-	}
-	"TF_WEAPON_PIPEBOMBLAUNCHER"
-	{
-		"nl"	"Kleefbommenwerper"
-	}
-	"TF_WEAPON_FLAMETHROWER"
-	{
-		"nl"	"Vlammenwerper"
-	}
-	"TF_WEAPON_PISTOL"
-	{
-		"nl"	"Pistool"
-	}
-	"TF_WEAPON_REVOLVER"
-	{
-		"nl"	"Revolver"
-	}
-	"TF_WEAPON_PDA_ENGINEER"
-	{
-		"nl"	"PDA"
-	}
-	"TF_WEAPON_MEDIGUN"
-	{
-		"nl"	"Medigun"
-	}
-	"TF_WEAPON_WATCH"
-	{
-		"nl"	"Onzichtbaarheidshorloge"
-	}
 	"TF_UNIQUE_ACHIEVEMENT_MEDIGUN1"
 	{
 		"nl"	"Kritzkrieg"
@@ -155,14 +59,6 @@
 	"TF_UNIQUE_ACHIEVEMENT_JAR"
 	{
 		"nl"	"Jarate"
-	}
-	"TF_UNIQUE_ACHIEVEMENT_FEIGNWATCH"
-	{
-		"nl"	"Doodse Gelijkenis"
-	}
-	"TF_UNIQUE_ACHIEVEMENT_CLOAKWATCH"
-	{
-		"nl"	"Verhul en Dolk"
 	}
 	"TF_UNIQUE_ACHIEVEMENT_REVOLVER"
 	{
@@ -224,9 +120,21 @@
 	{
 		"nl"	"Dalokohs Bar"
 	}
+	"TF_TTG_MAXGUN"
+	{
+		"nl"	"Lugermorph"
+	}
+	"TF_TTG_SAMREVOLVER"
+	{
+		"nl"	"Big Kill"
+	}
 	"TF_UNIQUE_ENERGYDRINK_CRITCOLA"
 	{
 		"nl"	"Crit-de-Cola"
+	}
+	"TF_UNIQUE_GOLDEN_WRENCH"
+	{
+		"nl"	"Gouden Moersleutel"
 	}
 	"TF_UNIQUE_TRIBALMANKUKRI"
 	{
@@ -295,5 +203,9 @@
 	"TF_UNIQUE_GLOVES_OF_RUNNING_URGENTLY"
 	{
 		"nl"	"De Haastige Handschoenen"
+	}
+	"TF_UNIQUE_FRYINGPAN"
+	{
+		"nl"	"Braadpan"
 	}
 }
