--- a/translations/pl/weapons.phrases.tf.txt
+++ b/translations/pl/weapons.phrases.tf.txt
@@ -1,101 +1,5 @@
 ﻿"Phrases"
 {
-	"TF_WEAPON_BAT"
-	{
-		"pl"	"Kij baseballowy"
-	}
-	"TF_WEAPON_BOTTLE"
-	{
-		"pl"	"Butelka"
-	}
-	"TF_WEAPON_FIREAXE"
-	{
-		"pl"	"Topór strażacki"
-	}
-	"TF_WEAPON_CLUB"
-	{
-		"pl"	"Kukri"
-	}
-	"TF_WEAPON_KNIFE"
-	{
-		"pl"	"Nóż"
-	}
-	"TF_WEAPON_FISTS"
-	{
-		"pl"	"Pięści"
-	}
-	"TF_WEAPON_SHOVEL"
-	{
-		"pl"	"Saperka"
-	}
-	"TF_WEAPON_WRENCH"
-	{
-		"pl"	"Klucz"
-	}
-	"TF_WEAPON_BONESAW"
-	{
-		"pl"	"Piła do kości"
-	}
-	"TF_WEAPON_SHOTGUN"
-	{
-		"pl"	"Strzelba"
-	}
-	"TF_WEAPON_SCATTERGUN"
-	{
-		"pl"	"Dubeltówka"
-	}
-	"TF_WEAPON_SNIPERRIFLE"
-	{
-		"pl"	"Karabin snajperski"
-	}
-	"TF_WEAPON_MINIGUN"
-	{
-		"pl"	"Minigun"
-	}
-	"TF_WEAPON_SMG"
-	{
-		"pl"	"LKM"
-	}
-	"TF_WEAPON_SYRINGEGUN"
-	{
-		"pl"	"Karabin strzykawkowy"
-	}
-	"TF_WEAPON_ROCKETLAUNCHER"
-	{
-		"pl"	"Wyrzutnia rakiet"
-	}
-	"TF_WEAPON_GRENADELAUNCHER"
-	{
-		"pl"	"Granatnik"
-	}
-	"TF_WEAPON_PIPEBOMBLAUNCHER"
-	{
-		"pl"	"Wyrzutnia bomb samoprzylepnych"
-	}
-	"TF_WEAPON_FLAMETHROWER"
-	{
-		"pl"	"Miotacz ognia"
-	}
-	"TF_WEAPON_PISTOL"
-	{
-		"pl"	"Pistolet"
-	}
-	"TF_WEAPON_REVOLVER"
-	{
-		"pl"	"Rewolwer"
-	}
-	"TF_WEAPON_PDA_ENGINEER"
-	{
-		"pl"	"PDA"
-	}
-	"TF_WEAPON_MEDIGUN"
-	{
-		"pl"	"Medigun"
-	}
-	"TF_WEAPON_WATCH"
-	{
-		"pl"	"Zegarek niewidzialności"
-	}
 	"TF_UNIQUE_ACHIEVEMENT_MEDIGUN1"
 	{
 		"pl"	"Kritzkrieg"
@@ -155,14 +59,6 @@
 	"TF_UNIQUE_ACHIEVEMENT_JAR"
 	{
 		"pl"	"Jarate"
-	}
-	"TF_UNIQUE_ACHIEVEMENT_FEIGNWATCH"
-	{
-		"pl"	"Dead Ringer"
-	}
-	"TF_UNIQUE_ACHIEVEMENT_CLOAKWATCH"
-	{
-		"pl"	"Cloak and Dagger"
 	}
 	"TF_UNIQUE_ACHIEVEMENT_REVOLVER"
 	{
@@ -224,9 +120,21 @@
 	{
 		"pl"	"Dalokohs Bar"
 	}
+	"TF_TTG_MAXGUN"
+	{
+		"pl"	"Lugermorph"
+	}
+	"TF_TTG_SAMREVOLVER"
+	{
+		"pl"	"Big Kill"
+	}
 	"TF_UNIQUE_ENERGYDRINK_CRITCOLA"
 	{
 		"pl"	"Crit-a-Cola"
+	}
+	"TF_UNIQUE_GOLDEN_WRENCH"
+	{
+		"pl"	"Golden Wrench"
 	}
 	"TF_UNIQUE_TRIBALMANKUKRI"
 	{
@@ -295,6 +203,10 @@
 	"TF_UNIQUE_GLOVES_OF_RUNNING_URGENTLY"
 	{
 		"pl"	"Gorące Rękawice Uciekiniera"
+	}
+	"TF_UNIQUE_FRYINGPAN"
+	{
+		"pl"	"Frying Pan"
 	}
 	"TF_WEAPON_STICKYBOMB_JUMP"
 	{
