--- a/translations/ro/weapons.phrases.tf.txt
+++ b/translations/ro/weapons.phrases.tf.txt
@@ -1,101 +1,5 @@
 ﻿"Phrases"
 {
-	"TF_WEAPON_BAT"
-	{
-		"ro"	"Bâtă"
-	}
-	"TF_WEAPON_BOTTLE"
-	{
-		"ro"	"Sticlă"
-	}
-	"TF_WEAPON_FIREAXE"
-	{
-		"ro"	"Topor"
-	}
-	"TF_WEAPON_CLUB"
-	{
-		"ro"	"Kukri"
-	}
-	"TF_WEAPON_KNIFE"
-	{
-		"ro"	"Cuţit"
-	}
-	"TF_WEAPON_FISTS"
-	{
-		"ro"	"Pumni"
-	}
-	"TF_WEAPON_SHOVEL"
-	{
-		"ro"	"Lopată"
-	}
-	"TF_WEAPON_WRENCH"
-	{
-		"ro"	"Cheie Franceză"
-	}
-	"TF_WEAPON_BONESAW"
-	{
-		"ro"	"Fierăstrău"
-	}
-	"TF_WEAPON_SHOTGUN"
-	{
-		"ro"	"Puşcă"
-	}
-	"TF_WEAPON_SCATTERGUN"
-	{
-		"ro"	"Puşcă cu Alice"
-	}
-	"TF_WEAPON_SNIPERRIFLE"
-	{
-		"ro"	"Puşcă cu Luneta"
-	}
-	"TF_WEAPON_MINIGUN"
-	{
-		"ro"	"Minigun"
-	}
-	"TF_WEAPON_SMG"
-	{
-		"ro"	"Pistol Mitralieră"
-	}
-	"TF_WEAPON_SYRINGEGUN"
-	{
-		"ro"	"Armă cu Seringi"
-	}
-	"TF_WEAPON_ROCKETLAUNCHER"
-	{
-		"ro"	"Lansator Rachete"
-	}
-	"TF_WEAPON_GRENADELAUNCHER"
-	{
-		"ro"	"Aruncător Grenade"
-	}
-	"TF_WEAPON_PIPEBOMBLAUNCHER"
-	{
-		"ro"	"Lansator Bombe Lipicioase"
-	}
-	"TF_WEAPON_FLAMETHROWER"
-	{
-		"ro"	"Aruncător de Flăcări"
-	}
-	"TF_WEAPON_PISTOL"
-	{
-		"ro"	"Pistol"
-	}
-	"TF_WEAPON_REVOLVER"
-	{
-		"ro"	"Revolver"
-	}
-	"TF_WEAPON_PDA_ENGINEER"
-	{
-		"ro"	"PDA"
-	}
-	"TF_WEAPON_MEDIGUN"
-	{
-		"ro"	"Vindecător"
-	}
-	"TF_WEAPON_WATCH"
-	{
-		"ro"	"Ceas Invizibilitate"
-	}
 	"TF_UNIQUE_ACHIEVEMENT_MEDIGUN1"
 	{
 		"ro"	"Kritzkrieg"
@@ -155,14 +59,6 @@
 	"TF_UNIQUE_ACHIEVEMENT_JAR"
 	{
 		"ro"	"Şuşu"
-	}
-	"TF_UNIQUE_ACHIEVEMENT_FEIGNWATCH"
-	{
-		"ro"	"Ceasul Morţii"
-	}
-	"TF_UNIQUE_ACHIEVEMENT_CLOAKWATCH"
-	{
-		"ro"	"Pelerină şi Pumnal"
 	}
 	"TF_UNIQUE_ACHIEVEMENT_REVOLVER"
 	{
@@ -224,9 +120,21 @@
 	{
 		"ro"	"Ciocolată Dalokohs"
 	}
+	"TF_TTG_MAXGUN"
+	{
+		"ro"	"Lugermorph"
+	}
+	"TF_TTG_SAMREVOLVER"
+	{
+		"ro"	"Big Kill"
+	}
 	"TF_UNIQUE_ENERGYDRINK_CRITCOLA"
 	{
 		"ro"	"Crit-a-Cola"
+	}
+	"TF_UNIQUE_GOLDEN_WRENCH"
+	{
+		"ro"	"Cheie Franceză de Aur"
 	}
 	"TF_UNIQUE_TRIBALMANKUKRI"
 	{
